feat: Add reference into toc

--- a/hitrep.cls
+++ b/hitrep.cls
@@ -277,6 +277,12 @@
 
 \bibliographystyle{gbt7714-numerical}
 
+\newcommand{\bib}{1}{
+    \phantomsection
+    \addcontentsline{toc}{section}{\refname}
+    \bibliography{#1}
+}
+
 %----------------------------------------------------------------------------------------------------%
 %
 % -> New Environments
